--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "active-model-adapter": "2.0.2",
     "broccoli-asset-rev": "^2.2.0",
     "ember-ajax": "0.6.3",
     "ember-cli": "1.13.8",
@@ -26,16 +27,22 @@
     "ember-cli-babel": "^5.1.5",
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "^1.1.0",
+    "ember-cli-fill-murray": "0.3.0",
     "ember-cli-htmlbars": "^1.0.1",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.3.1",
+    "ember-cli-moment-shim": "0.6.2",
     "ember-cli-qunit": "^1.0.3",
     "ember-cli-release": "0.2.8",
+    "ember-cli-sass": "5.0.1",
     "ember-cli-sri": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "2.1.0",
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^1.0.4",
-    "ember-resolver": "^2.0.3"
+    "ember-moment": "4.1.0",
+    "ember-resolver": "^2.0.3",
+    "ember-suave": "1.2.2",
+    "emberx-select": "2.0.1"
   }
 }
